raffia/tests/error/scss/at-rule/function/unterminated.snap
---
source: raffia/tests/error.rs
---
error: expect token `$var`, but found `{`
  ┌─ unterminated.scss:1:38
  │
1 │ @function missing-paren-error($a,$b, {
  │                                      ^


